# rust-on-steroids

./: .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: .bash_aliases  .bashrc  .env.example  .env.mysql  Dockerfile  devcontainer.json  docker-compose.mysql.yml  docker-compose.postgres.yml  docker-compose.yml  env.postgres
crates/axum-server/: Cargo.toml
crates/axum-server/src/: config.rs  main.rs
crates/db/: .env  Cargo.toml  build.rs
crates/db/db/migrations/: 20231220190619_user_tables.sql
crates/db/migrations/: 20231221021130_user_tables.sql
crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/ssl_generator/: Cargo.toml
crates/ssl_generator/src/: main.rs
