[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
db = { version = "0.1.0", path = "../db" }
tokio = { version = "1.35.1",  features = ["full"] }
log = "0.4.20"
dotenv = "0.15.0"
