[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-postgres = "0.10.5"
futures = "0.3.29"
postgres-types = "0.2.6"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.10.0"
webpki-roots = "0.26.0"
cornucopia_async = "0.4.0"
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
dotenv = "0.15.0"
